--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -16,8 +16,7 @@
 }
 
 .todo-list-container {
-	width: 1000px;
-	border: 1px solid green;
+	width: 980px;
 	margin: 0 auto;
 	padding: 20px;
 	background: #f9f9f9;
@@ -28,14 +27,7 @@
 		@include spaceBetween;
 		align-items: center;
 		padding: 25px;
-		border-bottom: 2px dashed #d6831d;
-		input[type="text"] {
-			flex: 1;
-			padding: 5px;
-			border: 1px solid #ce5555;
-			border-radius: 10px;
-			margin-right: 10px;
-		}
+		border-bottom: 2px dashed #ccc2b6;
 
 		&:last-child {
 			border-bottom: none;
@@ -44,7 +36,7 @@
 			display: block;
 			position: relative;
 			padding-left: 35px;
-			margin-bottom: 12px;
+			margin-bottom: 25px;
 			cursor: pointer;
 			font-size: 22px;
 			-webkit-user-select: none;
@@ -64,14 +56,16 @@
 				left: 0;
 				height: 25px;
 				width: 25px;
-				background-color: #eee;
+				background-color: #e0dede;
 				border-radius: 20px;
+				box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.1);
 			}
 			&:hover input ~ .checkmark {
 				background-color: #ccc;
 			}
 			& input:checked ~ .checkmark {
 				background-color: $secondary-color;
+				transition: all 0.3s;
 			}
 		}
 
