fix: edit button layout

--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -1,6 +1,6 @@
 $primary-color: #11af9d;
 $secondary-color: #17811b;
-$background-color: #e1e6e7;
+$background-color: #dee8ea;
 $error-color: #a81106;
 $error-color-hover: #ff4c4c;
 $warning-color: #ffbb33;
