--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -6,12 +6,19 @@
 	align-items: center;
 	font-family: "Poppins", sans-serif;
 	padding: 20px;
-	background: $background-color;
+	background: #e9e9e9;
 	min-height: 100vh;
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	border: #ccc2b6 1px solid;
 
-	h1 {
+	.mainHeading {
+		background-color: rgb(236, 236, 236);
+		display: flex;
+		width: 1000px;
 		color: $black;
-		margin: 50px 0px;
+		justify-content: center;
+		margin: 30px 0px;
+		padding: 20px;
 	}
 }
 
@@ -69,6 +76,15 @@
 			}
 		}
 
+		.editInput {
+			width: 50%;
+			height: 40px;
+			padding-left: 20px;
+			border: none;
+			background-color: #ededed;
+			box-shadow: inset 0 4px 6px rgba(0, 0, 0, 0.1);
+		}
+
 		.verticalLine {
 			flex: 1;
 			text-decoration: line-through;
@@ -95,11 +111,12 @@
 .todo-form {
 	@include spaceBetween;
 	margin-bottom: 25px;
+
 	.todoInput {
 		padding: 12px;
-		border: 1px solid #ddd;
+		border: 1px solid #e6e6e6;
 		outline: none;
-		box-shadow: inset;
+		box-shadow: inset 0 4px 6px rgba(144, 144, 144, 0.1);
 		border-radius: 6px 0 0 6px;
 		width: 800px;
 	}
